busstops/static/css/_base.scss
/* ... */
#hugemap {
    .stop-arrow {
        position: absolute;
        left: 3px;
        top: 3px;
    }

    .stop {
        color: #fff;
        font-size: 9px;
        line-height: 16px;
        text-align: center;

        .zoomed-in &,
        &:hover {
            .stop-arrow {
                height: 14px;
                left: 0px;
                top: 0px;
                width: 14px;
                z-index: -1;
            }

            &.stop-0 {
                .stop-arrow {
                    height: 13px;
                    left: 1px;
                    top: 1px;
                    width: 13px;
                }
            }
        
            &.stop-1 {
                font-size: 11px;
            }
        }
    }
}

.service-map {
    .stop-arrow {
        background: #fff;
        border: 2px solid #87f;
        height: 5px;
        width: 5px;
    }
}

.leaflet-bar {
    img {
        border: 0;
        padding-top: 5px;

        .leaflet-touch & {
            padding-top: 7px;
        }
    }
}

@keyframes materialize {
    0% {
        opacity: 100%;
    }

    50% {
        opacity: 0;
    }

    100% {
        opacity: 100%;
    }
}

.leaflet-control-locate {
    a {
        background: url('/static/locate.png');
        background-size: 16px;
    }

    &.requesting a {
        animation: materialize 3s infinite alternate ease-in-out;
    }
}

.leaflet-control-locate-location circle {
    animation: leaflet-control-locate-throb 4s ease infinite;
}

@keyframes leaflet-control-locate-throb {
    0% {
        stroke-width: 1;
    }
    50% {
        stroke-width: 3;
        transform: scale(0.8, 0.8);
    }
    100% {
        stroke-width: 1;
    }
}

body {
    .leaflet-container {
        font-family: inherit;
        font-size: .875em;
    }
}

.leaflet-popup-content a {
    display: block;
    font-size: 1em;
    overflow: hidden;

    span {
        display: block;
    }

    small {
        color: $text-color;
        display: block;
        float: left;
        font-size: .75em;
        margin-right: .5em;
    }
}

.leaflet-left {
    margin-left: env(safe-area-inset-left);
}

.leaflet-right {
    margin-right: env(safe-area-inset-right);
}

table {
    border-collapse: collapse;
}

.fleet {
    font-size: .875em;

    .livery-cell {
        padding-left: 3.25em;
        position: relative;
    }

    .livery {
        left: .5em;
        position: absolute;
        top: .2em;
    }

    th {
        background: $white;
        border-bottom: 1px solid $border-color;
        position: sticky;
        top: 0;
        white-space: normal;
        z-index: 1;
    }

    td {
        max-width: 10em;
        overflow: hidden;
        vertical-align: top;
    }

    .number {
        text-align: right;
    }

    .last-seen {
        max-width: 5em;
    }

    tbody {
        white-space: nowrap;
    }
}

td {
    border-top: 1px solid $border-color;
}

table a {
    display: block;
    margin: -.25em -.5em;
    padding: .25em .5em;
}

th,
td {
    border-left: 1px solid $border-color;
    padding: .25em .5em;
    text-align: left;

    &:first-child {
        border-left: 0;
        padding-left: 0;

        a {
            margin-left: 0;
            padding-left: 0;
        }
    }

    &:last-child {
        padding-right: 0;

        a {
            margin-right: 0;
            padding-right: 0;
        }
    }
}

thead {
    th {
        padding-top: 0;
        vertical-align: bottom;
    }
}

.timetable-wrapper-wrapper {
    font-size: .875em;
    margin: 1em 0;

    input {
        vertical-align: top;
    }
}

.timetable-wrapper {
    margin-right: -1.14em;
    margin-right: calc(env(safe-area-inset-left) * -1 - 1.14em);
    margin-top: 1em;
    overflow: auto;
}

input:not(:checked) + label {
    + .timetable-wrapper,
    + .route {
        .minor:not(:first-child):not(:last-child):not(.referrer) {
            display: none;
        }
    }
}

.timetable {
    border-collapse: separate;
    border-spacing: 0;
    font-variant-numeric: tabular-nums;
    padding-right: 1.14em;
    padding-right: calc(env(safe-area-inset-left) + 1.14em);
    table-layout: fixed;

    td {
        border-left: 0;
    }

    td,
    th {
        height: 1.5em;
    }

    tbody tr:first-child {
        td,
        th {
            border-top: 0;
        }
    }

    td:first-child {
        padding: 0;
    }

    .referrer {
        td,
        th {
            background: $brand-color;
        }

        td[colspan] {
            background: none;
        }

        a {
            color: $active-link-color;
        }
    }

    th {
        border-right: 1px solid $border-color;
        border-top: 1px solid $border-color;
        font-weight: normal;
        padding-right: 0;
        white-space: nowrap;

        a {
            margin: -.25em 0;
            max-width: calc(100vw - 12em);
            overflow: hidden;
            padding-left: 0;
            text-overflow: ellipsis;
        }
    }

    thead {
        td {
            border: 1px solid $border-color;
            border-width: 0 1px 1px 0;
            text-align: center;

            &:first-child {
                border-bottom: 0;
            }

            &:last-child {
                border-right: 0;
            }
        }
    }

    tfoot {
        td {
            border: 1px solid $border-color;
            border-width: 1px 1px 0 0;
            vertical-align: top;

            &:last-child {
                border-right: 0;
            }

        }
    }

    .dep,
    .minor + .minor {
        th,
        td {
            border-top: 0;
        }
    }

    .minor {
        th {
            a {
                padding-left: 1em;
            }
        }
    }
}

tfoot a {
    display: inline;
}

.fancy {
    th {
        position: absolute;

        a {
            max-width: inherit;
        }
    }
}
/* ... */

